--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,50 @@
+div {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+button {
+  width: calc(150px + 2vmin);
+  height: 50px;
+  background-color: #61dafb;
+  cursor: pointer;
+  font-weight: bold;
+  color: white;
+  font-size: calc(5px + 2vmin);
+  text-shadow: 0.1em 0.1em 0.1em black;
+  letter-spacing: 1px;
+  margin: 15px;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+input {
+  height: 30px;
+  margin: 10px;
+  border-radius: 5px;
+  outline: none;
+  color: white;
+  background-color: #282c34;
+  border: 4px solid #61dafb;
+  font-size: 20px;
+}
+
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .App-logo {
@@ -13,16 +58,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -32,6 +67,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
